<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFEE58"
    tools:context=".PlayerSetup">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView"
            android:textSize="25sp"
            android:textColor="#E53935"
            android:fontFamily="@font/beaitiful"
            android:layout_gravity="center"/>


        <TextView
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player1"
            android:textSize="15sp"
            android:layout_marginStart="10dp"
            android:textColor="#E53935"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/player1name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textSize="25sp"
            android:textColor="#E53935"
            android:textStyle="bold"
            />


        <TextView
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player2"
            android:textSize="15sp"
            android:layout_marginStart="10dp"
            android:textColor="#E53935"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/player2name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textSize="25sp"
            android:textColor="#E53935"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/submitBtn"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/submit"
            android:background="@drawable/btn_background"
            android:layout_marginTop="100dp"
            android:layout_gravity="center"

            />

    </LinearLayout>

</LinearLayout>